@@ -162,7 +162,14 @@ function attach_click_events()
             }
         }
 
-    addEvent(document.getElementById('tb_newfile'), 'click', new_file);
+    if(fromplug==1)
+    {
+        addEvent(document.getElementById('tb_newfile'), 'click', function() { window.location = "weathermap-cacti-plugin-mgmt.php"; });
+    }
+    else
+    {
+        addEvent(document.getElementById('tb_newfile'), 'click', new_file);
+    }
     addEvent(document.getElementById('tb_addnode'), 'click', add_node);
     addEvent(document.getElementById('tb_mapprops'), 'click', map_properties);
     addEvent(document.getElementById('tb_mapstyle'), 'click', map_style);
